--- a/ (2020:01:04 13:54).env
+++ b/ (2020:01:04 13:54).env
@@ -1,7 +1,7 @@
 APP_NAME=jum_fileup
 APP_ENV=local
 APP_KEY=base64:Pl3kt9fOh6WMt1cCyjJMbXL0eZ7IZO23KJ4J4jBtDew=
-APP_DEBUG=true
+APP_DEBUG=flase
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
